After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750655 - JNI: jaw_object_set_parent is missing
JNI: jaw_object_set_parent is missing
Status: RESOLVED FIXED
Product: java-atk-wrapper
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Magdalen Berns (irc magpie)
java-atk-wrapper maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-06-09 16:39 UTC by Magdalen Berns (irc magpie)
Modified: 2015-06-21 18:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to address problem (2.46 KB, patch)
2015-06-09 16:43 UTC, Magdalen Berns (irc magpie)
committed Details | Review
Patch to address problem (2.23 KB, patch)
2015-06-21 18:37 UTC, Magdalen Berns (irc magpie)
committed Details | Review

Description Magdalen Berns (irc magpie) 2015-06-09 16:39:56 UTC
This function could provide a wrapper for the setAccessibleParent method.
Comment 1 Magdalen Berns (irc magpie) 2015-06-09 16:43:22 UTC
Created attachment 304879 [details] [review]
Patch to address problem
Comment 2 Magdalen Berns (irc magpie) 2015-06-21 18:37:35 UTC
Created attachment 305778 [details] [review]
Patch to address problem