JNI: create jaw_object_set_parent

Bug: https://bugzilla.gnome.org/show_bug.cgi?id=750655